# hjtpx

./: .coverage-requirements.json  .coveragerc.json  .dockerignore  .env.example  .env.production  .env.staging  .eslintrc.js  .gitignore  .lintstagedrc  .pr_body.md  .prettierrc  .sentryclirc  ADVANCED_FEATURES_REPORT.md  ADVANCED_FEATURES_SUMMARY.md  BACKEND_API_TEST_REPORT.md  BACKEND_TEST_REPORT.md  BACKEND_TEST_REPORT_v2.md  BEHAVIOR_ANALYSIS_ENHANCEMENT.md  CICD_OPTIMIZATION_REPORT.md  CODE_CLEANUP_REPORT.md  CODE_QUALITY_REPORT.md  COMPLETE_TEST_REPORT.md  DATABASE_OPTIMIZATION_REPORT.md  DOCKER_OPTIMIZATION_SUMMARY.md  DOCKER_OPTIMIZATION_TASK10_COMPLETE.md  Dockerfile  Dockerfile.frontend  Dockerfile.frontend.optimized  Dockerfile.optimized  FEATURES_IMPLEMENTED.md  FINAL_TEST_REPORT.md  FRONTEND_PERFORMANCE_OPTIMIZATION_REPORT.md  IMPLEMENTATION_SUMMARY_17.md  MOBILE_ADAPTATION_REPORT.md  MONITORING_ENHANCEMENT_v11.md  MONITORING_ENHANCEMENT_v13.md  Makefile  OPTIMIZATION_REPORT.md  PARALLEL_TASKS_COMPLETION_REPORT.md  PERFORMANCE_BENCHMARK_IMPLEMENTATION.md  (+72 more)
.github/: cache-config.json
.husky/: .gitignore  commit-msg  pre-commit
.storybook/: main.js  preview.js
admin/: package.json
backend/: .gitignore  .golangci.yml  Makefile  behavior_test  benchmark_report_20260518_094240.html  benchmark_report_20260518_094240.json  benchmark_report_20260518_094712.html  benchmark_report_20260518_094712.json  build_summary.txt  coverage.html  coverage.txt  coverage_report.html  fingerprint_test_main.go  go.mod  go.sum  integration_test.go  obfuscated_output.js  security_test_report_20260518_033003.json  security_test_report_20260518_065331.json  start.sh  test_extensions.go  test_fingerprint.go  test_ui_service
benchmark/: Makefile  QUICKSTART.sh  benchmark_test.go  core.go  go.mod  performance_benchmark.go  regression.go  report_generator.go  vegeta.sh  wrk.sh
captcha-system/: .gitignore  Dockerfile  Makefile  docker-compose.yml  go.mod  go.sum
captchax/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  nginx.conf
config/: .env.example  filebeat.yml  logging_config.yml  storage.js
devtools/: README.md
docker/: entrypoint.sh  health-check.sh  log-collector.sh  log-management.sh  logging-config.json
e2e/: go.mod  (+14 more)
sdk/rust/: Cargo.toml  README.md
sdk/rust/examples/: async_example.rs  basic_example.rs  usage.rs
sdk/rust/src/: client.rs  config.rs  errors.rs  lib.rs  models.rs  tests.rs
sdk/rust/src/client/: mod.rs
sdk/rust/src/error/: mod.rs
sdk/rust/src/models/: mod.rs
sdk/rust/src/utils/: mod.rs
(+3555 files in other folders)
