[package]
name = "hjtpx-captcha-sdk"
version = "1.0.0"
edition = "2021"
description = "HJTPX Captcha SDK for Rust"
license = "MIT"
repository = "https://github.com/hjtpx/captcha-sdk"
readme = "README.md"

[dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
base64 = "0.21"
hmac = "0.12"
sha2 = "0.10"
url = "2.3"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.0"
env_logger = "0.10"
